# grow_assist

./: README.md  main.py  pyproject.toml  requirements.txt
src/: main.py  models.py  product_links.csv  test.py  test_models.py
src/static/css/: styles.css
src/templates/: index.html
