[project]
name = "grow-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "jinja2>=3.1.0",
    "langchain[google-genai]>=1.0.5",
    "pytest>=8.4.2",
    "python-multipart>=0.0.6",
    "ruff>=0.14.4",
]
